Removed absolute position from navbar. This was done to fix a bug where in some browsers, it was making the navbar overlap with the score display.

--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -5,7 +5,6 @@
   padding: 2rem;
   font-weight: 600;
   width: 100%;
-  position: absolute;
 
   display: flex;
   justify-content: center;
